Windows fixes - libtimemory.dll does not change output path - utility's path_t does not export DLL symbols

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -57,8 +57,8 @@ macro(_BUILD_LIBRARY TYPE OUTPUT_NAME)
                 #COMPILE_FLAGS "/MP /bigobj /Tp"
                 LANGUAGE CXX
                 # C++ shared library fallback installation
-                LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
-                RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
+                #LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
+                #RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
                 #ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
                 POSITION_INDEPENDENT_CODE ON)
         else("${LIB_TYPE}" STREQUAL "SHARED")
