--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -89,7 +89,8 @@ install:
     pip install -U setuptools disttools
     pip install -U matplotlib numpy pillow
     $env:TIMEMORY_DEBUG=4
-
+    mkdir C:\Users\appveyor\CTestTemp
+    $env:TEMP = C:\Users\appveyor\CTestTemp
 
 build_script:
 - mkdir build-timemory
