--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -101,10 +101,10 @@ endif("${NPROCS}" GREATER 16)
 
 # ---------------------------------------------------------------------------- #
 
-set(CTEST_BUILD_NAME "[${CTEST_BRANCH}][${OS_NAME} ${HW_NAME}][${CTEST_COMPILER} ${CTEST_COMPILER_VERSION}][@CMAKE_BUILD_TYPE@][Python @PYBIND11_PYTHON_VERSION@][C++@CMAKE_CXX_STANDARD@]")
+set(CTEST_BUILD_NAME "[${CTEST_BRANCH}] [${OS_NAME} ${HW_NAME}] [${CTEST_COMPILER} ${CTEST_COMPILER_VERSION}] [Python @PYBIND11_PYTHON_VERSION@] [C++@CMAKE_CXX_STANDARD@]")
 
 if(MPI_FOUND)
-    set(CTEST_BUILD_NAME "${CTEST_BUILD_NAME}[MPI]")
+    set(CTEST_BUILD_NAME "${CTEST_BUILD_NAME} [MPI]")
 endif(MPI_FOUND)
 
 set(CTEST_SOURCE_DIRECTORY      "${CTEST_DASHBOARD_ROOT}/source-@PROJECT_NAME@")
