--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pybind11"]
 	path = pybind11
 	url = https://github.com/pybind/pybind11.git
+[submodule "source/python/pybind11"]
+	path = source/python/pybind11
+	url = https://github.com/pybind/pybind11.git
