--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -157,7 +157,13 @@ endif(TIMEMORY_USE_MPI)
 include(FindPackageHandleStandardArgs)
 # handle the QUIETLY and REQUIRED arguments and set UnitTest++_FOUND to TRUE
 # if all listed variables are TRUE
-find_package_handle_standard_args(@PROJECT_NAME@ DEFAULT_MSG
-    @PROJECT_NAME@_LIBRARIES
-    @PROJECT_NAME@_INCLUDE_DIR
-    @PROJECT_NAME@_PYTHON_DIR)
+if(TIMEMORY_PYTHON_BINDINGS)
+    find_package_handle_standard_args(@PROJECT_NAME@ DEFAULT_MSG
+        @PROJECT_NAME@_LIBRARIES
+        @PROJECT_NAME@_INCLUDE_DIR
+        @PROJECT_NAME@_PYTHON_DIR)
+else(TIMEMORY_PYTHON_BINDINGS)
+    find_package_handle_standard_args(@PROJECT_NAME@ DEFAULT_MSG
+        @PROJECT_NAME@_LIBRARIES
+        @PROJECT_NAME@_INCLUDE_DIR)
+endif(TIMEMORY_PYTHON_BINDINGS)
