Docker build.sh additions

--- a/docker/Dockerfile.intel.2018.1
+++ b/docker/Dockerfile.intel.2018.1
@@ -27,7 +27,7 @@ ENV TZ "America/Los_Angeles"
 # pass --build-arg PYTHON=python to enable Python 2.7
 # default is Python 3.5
 ARG PYTHON=python3
-
+ARG BRANCH=master
 
 ###############################################################################
 # Install some packages.
