--- a/docker/Dockerfile.intel.2018.1
+++ b/docker/Dockerfile.intel.2018.1
@@ -56,7 +56,7 @@ RUN . /root/.bash_init.sh && \
     docker-python -m pip install -U pip setuptools && \
     docker-python -m pip install -U disttools && \
     docker-python -m pip install -U numpy pillow matplotlib && \
-    git clone https://github.com/jrmadsen/TiMemory.git ${HOME}/TiMemory && \
+    git clone -b ${BRANCH} https://github.com/jrmadsen/TiMemory.git ${HOME}/TiMemory && \
     mkdir -p ${HOME}/build-timemory && \
     cd ${HOME}/build-timemory && \
     cmake \
