--- a/setup.cfg
+++ b/setup.cfg
@@ -19,5 +19,5 @@ cmake_include_path=
 # developer config (for hybrid Python C++)
 devel_install=ON
 pybind11_install=OFF
-# choose platform default, e.g. Windows will be static
-dynamic_link=platform-default
+# choose platform default, e.g. platform-default, ON (shared libs), OFF (static libs)
+build_shared=platform-default
