--- a/cmake/Templates/__init__.py.in
+++ b/cmake/Templates/__init__.py.in
@@ -30,6 +30,7 @@ import sys
 import imp
 import ctypes
 import platform
+import warnings
 from ctypes.util import find_library
 
 # get the path to this directory
@@ -190,22 +191,38 @@ timemory.__setattr__("build_info",
                        "compiler_id" : "@CMAKE_CXX_COMPILER_ID@",
                        "compiler_version" : "@CMAKE_CXX_COMPILER_VERSION@" } )
 
-# load the submodule
-__init_utl = __load_module('util', os.path.join(this_path, 'util/__init__.py'))
-# add the submodule attributes
-timemory.__setattr__("util", __init_utl.__self)
+try:
+    with warnings.catch_warnings():
+        # load the submodule
+        __init_utl = __load_module('util', os.path.join(this_path, 'util/__init__.py'))
+        # add the submodule attributes
+        timemory.__setattr__("util", __init_utl.__self)
+except:
+    warnings.warn("TiMemory was unable to import '{}' submodule. {}".format("util", e))
+
+try:
+    with warnings.catch_warnings():
+        # load the submodule
+        __init_mpi = __load_module('mpi_support', os.path.join(this_path, 'mpi_support/__init__.py'))
+        # add the submodule attributes
+        timemory.__setattr__("mpi_support", __init_mpi.__self)
+except:
+    warnings.warn("TiMemory was unable to import '{}' submodule. {}".format("mpi_support", e))
 
 # load the submodule
-__init_mpi = __load_module('mpi_support', os.path.join(this_path, 'mpi_support/__init__.py'))
-# add the submodule attributes
-timemory.__setattr__("mpi_support", __init_mpi.__self)
+try:
+    with warnings.catch_warnings():
+        __init_plt = __load_module('plotting', os.path.join(this_path, 'plotting/__init__.py'))
+        # add the submodule attributes
+        timemory.__setattr__("plotting", __init_plt.__self)
+except:
+    warnings.warn("TiMemory was unable to import '{}' submodule. {}".format("plotting", e))
 
-# load the submodule
-__init_plt = __load_module('plotting', os.path.join(this_path, 'plotting/__init__.py'))
-# add the submodule attributes
-timemory.__setattr__("plotting", __init_plt.__self)
-
-# load the submodule
-__init_tst = __load_module('tests', os.path.join(this_path, 'tests/__init__.py'))
-# add the submodule attributes
-timemory.__setattr__("tests", __init_tst.__self)
+try:
+    with warnings.catch_warnings():
+        # load the submodule
+        __init_tst = __load_module('tests', os.path.join(this_path, 'tests/__init__.py'))
+        # add the submodule attributes
+        timemory.__setattr__("tests", __init_tst.__self)
+except Exception as e:
+    warnings.warn("TiMemory was unable to import '{}' submodule. {}".format("tests", e))
