C interface fixes + C example + Example restructuring
- Got rid of ex{1,2,3} and replaced with ex-{c,cxx,cxx-mpi}
- added tim::dirname
- import plotting fixes
- better C auto timer functions / interfaces
- removed cxx declarations from ctimemory.h
- moved cxx declarations to ctimemory.c
- consistent cxx_timemory_* function names in auto_timer.cpp

--- a/examples/ex-cxx-mpi/CMakeLists.txt
+++ b/examples/ex-cxx-mpi/CMakeLists.txt
@@ -12,9 +12,9 @@ endif(GOOD_CMAKE)
 cmake_policy(SET CMP0042 NEW)
 
 #----------------------------------------------------------------------------
-project(TiMemory-Example2-MPI)
+project(TiMemory-CXX-MPI-Example C CXX)
 
-set(EXE_NAME mpi_test_timing)
+set(EXE_NAME test_cxx_mpi_timing)
 
 find_package(MPI REQUIRED)
 find_package(TiMemory REQUIRED)
